<?xml version="1.0" encoding="utf-8"?>
<ScrollView
 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center_vertical"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:hint="HINT" />

        <ImageView
            android:id="@+id/poster_image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"
            android:textAlignment="center"
            android:transitionName="poster"
            android:contentDescription="@string/image_poster"
            app:layout_constraintBottom_toTopOf="@+id/plot_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <TextView
            android:id="@+id/plot_text"
            style="@style/margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster_image"
            tools:text="PLOT" />

        <TextView
            android:id="@+id/rating_text"
            style="@style/margins"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/date_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster_image"
            app:layout_constraintTop_toTopOf="@+id/poster_image"
            tools:text="RATING" />

        <TextView
            android:id="@+id/date_text"
            style="@style/margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/poster_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster_image"
            app:layout_constraintTop_toBottomOf="@+id/rating_text"
            tools:text="DATE" />

        <Button
            android:id="@+id/favorite_button"
            style="@android:style/Widget.Material.Light.CompoundButton.RadioButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/favorites"
            android:onClick="addToFavorites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/date_text"
            app:layout_constraintTop_toBottomOf="@+id/plot_text" />

        <TextView
            android:id="@+id/trailer_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/margins"
            android:text="@string/trailer_string"
            app:layout_constraintEnd_toStartOf="@+id/date_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plot_text" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailer_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/margins"
            app:layout_constraintTop_toBottomOf="@+id/trailer_list_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/review_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/margins"
            android:text="@string/review_string"
            app:layout_constraintEnd_toStartOf="@+id/date_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trailer_list"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/review_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/margins"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/review_list_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>
    </ScrollView>

